Added karma & jasmine

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -10,7 +10,7 @@
 </head>
 <body ng-app="mean-bp" ng-controller="AppCtrl as app">
 
-{{app.test}}
+{{app.message}}
 
 <script type="application/javascript" src="vendor/angular.min.js"></script>
 
