--- a/src/app/styles/main.scss
+++ b/src/app/styles/main.scss
@@ -2,6 +2,10 @@
 @import '../home/home';
 
 body {
-  color: $red;
-  background-color: $blue;
+  //color: $red;
+  //background-color: $blue;
+}
+
+.main-content {
+  padding-top: 90px;
 }
