--- a/src/app/common/directives/navigation/navigation.tpl.html
+++ b/src/app/common/directives/navigation/navigation.tpl.html
@@ -12,7 +12,21 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="/" ui-sref="home">Home</a></li>
-                <li><a href="/about">About</a></li>
+            </ul>
+
+            <ul class="nav navbar-nav navbar-right">
+                <!--<li><a href="#">Link</a></li>-->
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">Account <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li ng-if="!navigation.loggedIn"><a href="#" ng-click="navigation.toLogin($event)">Login</a></li>
+                        <li ng-if="!navigation.loggedIn"><a href="/register" ui-sref="register">Register</a></li>
+                        <li ng-if="navigation.loggedIn"><a href="/profile" ui-sref="profile">Profile</a></li>
+                        <li ng-if="navigation.loggedIn" role="separator" class="divider"></li>
+                        <li ng-if="navigation.loggedIn"><a href="#" ng-click="navigation.logout($event)">Logout</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
